Bower 1.1-unreleased
====================

* config: Support multiple open_part, open_url, pipe_id commands.

Bower 1.0 (2022-08-21)
======================
The first commit to this project was made 11 years ago. Let's call this v1.0.

* index: Use Alt+Enter to open a thread in "obscured" mode.
  Messages that did not match the search query are displayed differently and
  not interactable.
* thread/pager: Use 'M' key to toggle obscured mode.
* Allow omitting "+" prefix when entering tag additions.
* Support tag editing on compose screen.
* Inherit tags from message being replied to or forwarded.
* Also apply tags to sent message when using a custom post_sendmail action.
* Use domain of From address for right part of Message-ID.
* Expand ~ in config values.
* Expand ~ in interactively entered commands.
* config: Add ui.default_save_directory option.
* Remove lynx as the default HTML-to-text filter.
* Improve search string parser.
* Fix bug where "body:(foo bar)" was unparsed as "body: ( foo bar )".
* Restrict places in search string where "~" names a Bower search term alias
  to after whitespace or open parenthesis/brace.
* Accept mailto: argument on command line.
* Accept --help and --version options.

Bower 0.13 (2021-07-24)
=======================
Please note there are a few key binding changes.

* Support composing messages with text/html alternative;
  see alt_html_filter config option. (Frank Seifferth)
* Add compose.signature_file config option.
* Support Alt+Key bindings for fast alias expansion in index. (Frank Seifferth)
* Use 'U' to toggle unread instead of 'N'. (Frank Seifferth)
* Add 'N' to search in opposite direction. (Frank Seifferth)
* Add 'w' as an alias to save parts. (Frank Seifferth)
* Add '$' to mark threads or messages as spam. (Sean E. Russell)
* compose: Use 'B' for "edit Bcc". (Frank Seifferth)
* Add thread_ordering config option. (Frank Seifferth)
* Increase thread pane size for long threads. (Frank Seifferth)