@@ -2,6 +2,7 @@ Bower 1.1-unreleased
 ====================
 
 * config: Support multiple open_part, open_url, pipe_id commands.
+* pager: Use wcwidth to count line width for word wrap.
 
 Bower 1.0 (2022-08-21)
 ======================
